--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "smartreact",
+  "name": "smartcontact",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app to help you manage your Emails",
   "main": "main.js",
   "scripts": {
-    "start": "webpack --mode development && electron ."
+    "start": "webpack --mode development && electron .",
+    "dist": "electron-builder"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "electron": "^30.0.1",
+    "electron-builder": "^24.13.3",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
